--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,48 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>storm-focused-crawler</groupId>
-  <artifactId>storm-focused-crawler</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
   
-  <dependencies>
-		<dependency>
-  			<groupId>storm</groupId>
-  			<artifactId>storm</artifactId>
-  			<version>0.8.1</version>
-		</dependency>
+	<modelVersion>4.0.0</modelVersion>
+  	<groupId>eu.socialsensor</groupId>
+  	<artifactId>storm-focused-crawler</artifactId>
+  	<version>0.1-SNAPSHOT</version>
+  	<packaging>jar</packaging>
+  	
+ 	<parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+  
+  	<name>storm-focused-crawler</name>
+    <url>https://github.com/socialsensor/storm-focused-crawler</url>
+    <description> Collects multimedia content shared through social networks. </description>
+    
+  	<developers>
+        <developer>
+            <id>manosetro</id>
+            <name>Manos Schinas</name>
+            <email>manosetro@iti.gr</email>
+        </developer>
+  	</developers>
+    
+  	<licenses>
+    	<license>
+      		<name>The Apache Software License, Version 2.0</name>
+      		<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      		<distribution>repo</distribution>
+    	</license>
+  	</licenses>
+  	
+  	<dependencies>
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>2.11.1</version>
 		</dependency>
-		<dependency>
-			<groupId>eu.socialsensor</groupId>
-			<artifactId>socialsensor-framework-common</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.socialsensor</groupId>
-			<artifactId>socialmedia-abstractions</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>2.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.socialsensor</groupId>
-			<artifactId>lingpipe</artifactId>
-			<version>4.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.gravity</groupId>
@@ -68,49 +64,79 @@
 			<artifactId>httpcore</artifactId>
 			<version>4.2.5</version>
 		</dependency>
-  </dependencies>
+		<dependency>
+			<groupId>de.l3s.boilerpipe</groupId>
+			<artifactId>boilerpipe</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.socialsensor</groupId>
+			<artifactId>socialsensor-framework-client</artifactId>
+			<version>0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.socialsensor</groupId>
+			<artifactId>socialsensor-framework-common</artifactId>
+			<version>0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>eu.socialsensor</groupId>
+			<artifactId>socialmedia-abstractions</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sourceforge.nekohtml</groupId>
+			<artifactId>nekohtml</artifactId>
+			<version>1.9.19</version>
+		</dependency>
+		<dependency>
+			<groupId>storm</groupId>
+			<artifactId>storm</artifactId>
+			<version>0.8.2</version>
+		</dependency>
+  	</dependencies>
 	
-	<repositories>
-        <repository>
-            <id>central</id>
-            <name>Maven Repository Switchboard</name>
-            <layout>default</layout>
-            <url>http://repo1.maven.org/maven2</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>       
-        <repository>
-            <id>central-staging</id>
-            <url>https://oss.sonatype.org/content/groups/central-staging/</url>
-        </repository>
-        <repository>
-            <id>mandubian-mvn</id>
-            <url>
-                http://mandubian-mvn.googlecode.com/svn/trunk/mandubian-mvn/repository
-            </url>
-        </repository>
-        <repository>
-            <id>prometheus-atc-releases</id>
-            <name>prometheus-atc-releases</name>
-            <url> http://prometheus.atc.gr:8080/nexus/content/repositories/releases/</url>
-            <releases>
-                <updatePolicy>always</updatePolicy>
-                <enabled>true</enabled>
-            </releases>
-        </repository>
-        <repository>
-            <id>prometheus-atc-snapshots</id>
-            <name>prometheus-atc-snapshots</name>
-            <url>http://prometheus.atc.gr:8080/nexus/content/repositories/snapshots/</url>
-            <snapshots>
-                <updatePolicy>always</updatePolicy>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-  			<id>clojars.org</id>
-  			<url>http://clojars.org/repo</url>
-		</repository>
-    </repositories>
+	<repositories />
+    <pluginRepositories />
+    
+	<build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+         
+            </plugin>
+      
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
