--- a/pom.xml
+++ b/pom.xml
@@ -45,34 +45,19 @@
 			<version>2.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.gravity</groupId>
-			<artifactId>goose</artifactId>
-			<version>2.1.22</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.9.2</artifactId>
-			<version>0.8.0-beta1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.yammer.metrics</groupId>
-			<artifactId>metrics-core</artifactId>
-			<version>2.2.0</version>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore</artifactId>
-			<version>4.2.5</version>
+			<artifactId>httpclient</artifactId>
+			<version>4.3</version>
 		</dependency>
 		<dependency>
 			<groupId>de.l3s.boilerpipe</groupId>
 			<artifactId>boilerpipe</artifactId>
 			<version>1.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>eu.socialsensor</groupId>
-			<artifactId>socialsensor-framework-client</artifactId>
-			<version>0.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>eu.socialsensor</groupId>
@@ -93,6 +78,11 @@
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
 			<version>1.9.19</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.7.2</version>
 		</dependency>
   	</dependencies>
 	
@@ -137,6 +127,39 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
+        	<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+          		<artifactId>maven-shade-plugin</artifactId>
+           		<version>1.7.1</version>
+          		<executions>
+          			<execution>
+               			<phase>package</phase>
+               			<goals>
+                   			<goal>shade</goal>
+               			</goals>
+               			<configuration>
+                  			<filters>
+                    			<filter>
+                          			<artifact>*:*</artifact>
+                          			<excludes>
+                             			<exclude>META-INF/*.SF</exclude>
+                                  		<exclude>META-INF/*.DSA</exclude>
+                                  		<exclude>META-INF/*.RSA</exclude>                                       
+                              		</excludes>
+                          		</filter>
+                      		</filters>
+                     		<transformers>
+                      			<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                           			<manifestEntries>
+                               			<Main-Class>eu.socialsensor.focused.crawler.WebLinksHandler</Main-Class>
+                                  		<Build-Number>123</Build-Number>
+                              		</manifestEntries>
+                          		</transformer>
+                     		</transformers>
+                		</configuration>
+             		</execution>
+          		</executions>
+      		</plugin>
+      	</plugins>
     </build>
 </project>
