--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
     
 	<build>
         <plugins>
+        	<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -99,9 +100,9 @@
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
-         
             </plugin>
-      
+      		-->
+      		
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -127,6 +128,7 @@
                     </execution>
                 </executions>
             </plugin>
+            
         	<plugin>
         		<groupId>org.apache.maven.plugins</groupId>
           		<artifactId>maven-shade-plugin</artifactId>
@@ -138,6 +140,10 @@
                    			<goal>shade</goal>
                			</goals>
                			<configuration>
+               				<!--  
+               				<shadedArtifactAttached>true</shadedArtifactAttached>
+              				<shadedClassifierName>runnable</shadedClassifierName>
+              				-->
                   			<filters>
                     			<filter>
                           			<artifact>*:*</artifact>
