--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 		<dependency>
 			<groupId>storm</groupId>
 			<artifactId>storm</artifactId>
-			<version>0.8.1</version>
+			<version>0.8.2</version>
 		</dependency>
   	</dependencies>
 	
@@ -135,10 +135,8 @@
                    			<goal>shade</goal>
                			</goals>
                			<configuration>
-               				<!--  
-               				<shadedArtifactAttached>true</shadedArtifactAttached>
-              				<shadedClassifierName>runnable</shadedClassifierName>
-              				-->
+              				<source>1.6</source>
+          					<target>1.6</target>
                   			<filters>
                     			<filter>
                           			<artifact>*:*</artifact>
