Add text indexing and fix media extraction from articles

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>eu.socialsensor</groupId>
+			<artifactId>socialsensor-framework-client</artifactId>
+			<version>0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
 			<version>1.9.19</version>
