--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,16 @@
 			<artifactId>storm</artifactId>
 			<version>0.8.2</version>
 		</dependency>
+		<dependency>
+  			<groupId>eu.socialsensor</groupId>
+  			<artifactId>multimedia-indexing</artifactId>
+  			<version>0.1-SNAPSHOT</version>
+  		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
   	</dependencies>
 	
 	<repositories>
