--- a/pom.xml
+++ b/pom.xml
@@ -165,7 +165,7 @@
                      		<transformers>
                       			<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            			<manifestEntries>
-                               			<Main-Class>eu.socialsensor.focused.crawler.WebLinksHandler</Main-Class>
+                               			<Main-Class>eu.socialsensor.focused.crawler.FocusedCrawler</Main-Class>
                                   		<Build-Number>123</Build-Number>
                               		</manifestEntries>
                           		</transformer>
