--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 			<artifactId>mm-concept-detection</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>eu.socialsensor</groupId>
+			<artifactId>socialsensor-stream-manager</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
   	</dependencies>
 	
 	<repositories>
