--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
                      		<transformers>
                       			<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            			<manifestEntries>
-                               			<Main-Class>eu.socialsensor.focused.crawler.SocialsensorCrawler</Main-Class>
+                               			<Main-Class>eu.socialsensor.focused.crawler.Crawler</Main-Class>
                                   		<Build-Number>123</Build-Number>
                               		</manifestEntries>
                           		</transformer>
